[package]
name = "gh-form"
version = "0.1.0"
authors = ["Yudai Nakata <yudai.nkt@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.58"
axum = "0.5.9"
clap = { version = "3.2.5", features = ["derive"] }
maud = { git = "https://github.com/lambda-fairy/maud", features = ["axum"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"

[dev-dependencies]
axum-macros = "0.2.2"
