[package]
name = "gh-form"
version = "0.1.6"
authors = ["Yudai Nakata <yudai.nkt@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Local previewer for GitHub issue forms"
repository = "https://github.com/yudai-nkt/gh-form"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "github"]

[dependencies]
anyhow = "1.0.58"
axum = "0.5.9"
clap = { version = "3.2.5", features = ["derive"] }
maud = { version = "0.24.0", features = ["axum"] }
pulldown-cmark = "0.9.1"
rsass = "0.25.2"
rust-embed = "6.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"

[dev-dependencies]
axum-macros = "0.2.2"
